0.7.0/_sources/api/napari.layers.Shapes.rst
napari.layers.Shapes
====================

.. currentmodule:: napari.layers

.. autoclass:: Shapes
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Shapes.add
   
   
      ~Shapes.add_ellipses
   
   
      ~Shapes.add_lines
   
   
      ~Shapes.add_paths
   
   
      ~Shapes.add_polygons
   
   
      ~Shapes.add_rectangles
   
   
      ~Shapes.as_layer_data_tuple
   
   
      ~Shapes.bind_key
   
   
      ~Shapes.block_thumbnail_update
   
   
      ~Shapes.block_update_properties
   
   
      ~Shapes.click_plane_from_click_data
   
   
      ~Shapes.create
   
   
      ~Shapes.data_to_world
   
   
      ~Shapes.get_index_and_intersection
   
   
      ~Shapes.get_ray_intersections
   
   
      ~Shapes.get_shape_info
   
   
      ~Shapes.get_source_str
   
   
      ~Shapes.get_status
   
   
      ~Shapes.get_value
   
   
      ~Shapes.interaction_box
   
   
      ~Shapes.move_to_back
   
   
      ~Shapes.move_to_front
   
   
      ~Shapes.pop
   
   
      ~Shapes.projected_distance_from_mouse_drag
   
   
      ~Shapes.refresh
   
   
      ~Shapes.refresh_colors
   
   
      ~Shapes.refresh_text
   
   
      ~Shapes.remove
   
   
      ~Shapes.remove_selected
   
   
      ~Shapes.save
   
   
      ~Shapes.set_view_slice
   
   
      ~Shapes.to_labels
   
   
      ~Shapes.to_masks
   
   
      ~Shapes.update_highlight_visibility
   
   
      ~Shapes.update_transform_box_visibility
   
   
      ~Shapes.world_to_data
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Shapes.ModeCallable
      ~Shapes.affine
      ~Shapes.axis_labels
      ~Shapes.blending
      ~Shapes.bounding_box
      ~Shapes.class_keymap
      ~Shapes.current_edge_color
      ~Shapes.current_edge_width
      ~Shapes.current_face_color
      ~Shapes.current_properties
      ~Shapes.cursor
      ~Shapes.cursor_size
      ~Shapes.data
      ~Shapes.edge_color
      ~Shapes.edge_color_cycle
      ~Shapes.edge_color_mode
      ~Shapes.edge_colormap
      ~Shapes.edge_contrast_limits
      ~Shapes.edge_width
      ~Shapes.editable
      ~Shapes.experimental_clipping_planes
      ~Shapes.extent
      ~Shapes.face_color
      ~Shapes.face_color_cycle
      ~Shapes.face_color_mode
      ~Shapes.face_colormap
      ~Shapes.face_contrast_limits
      ~Shapes.feature_defaults
      ~Shapes.features
      ~Shapes.help
      ~Shapes.keymap
      ~Shapes.loaded
      ~Shapes.metadata
      ~Shapes.mode
      ~Shapes.mouse_pan
      ~Shapes.mouse_zoom
      ~Shapes.name
      ~Shapes.name_overlay
      ~Shapes.ndim
      ~Shapes.nshapes
      ~Shapes.opacity
      ~Shapes.projection_mode
      ~Shapes.properties
      ~Shapes.property_choices
      ~Shapes.rotate
      ~Shapes.scale
      ~Shapes.scale_factor
      ~Shapes.selected_data
      ~Shapes.shape_type
      ~Shapes.shear
      ~Shapes.source
      ~Shapes.text
      ~Shapes.thumbnail
      ~Shapes.translate
      ~Shapes.unique_id
      ~Shapes.units
      ~Shapes.visible
      ~Shapes.z_index
      
      
      
      
      
   
   

   .. rubric:: Details